adds working lexer

--- a/.phpactor/templates/default/SourceCode.php.twig
+++ b/.phpactor/templates/default/SourceCode.php.twig
@@ -4,7 +4,9 @@ declare(strict_types=1);
 
 namespace {{ prototype.namespace }};
 
+{% for class in prototype.classes %}
 class {{ class.name }}
 {
 
 }
+{% endfor %}
