http: error page :yum:

--- a/src/Lemon/Http/templates/error.phtml
+++ b/src/Lemon/Http/templates/error.phtml
@@ -6,5 +6,11 @@
 </head>
 <body>
     <?php echo $code ?>
+    <hr>
+    <?php echo $message ?>
+<br>
+
+    <img src="https://http.cat/<?php echo $code ?>" alt="cat">
+    Image from <a href="https://http.cat">http.cat</a>
 </body>
 </html>
