--- a/src/Lemon/Debug/Handling/templates/reporter.phtml
+++ b/src/Lemon/Debug/Handling/templates/reporter.phtml
@@ -8,11 +8,15 @@
         * {
             font-family: 'Source Code Pro', monospace !important;
         }
+
         :root {
             --primary: #282828;
             --secondary: #A29783;
             --red: #AF2923;
             --mid-dark: #928374;
+        }
+        a {
+            text-decoration: underline !important;
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Lemon-Framework/static/reporter/dist/css/app.css">
